--- a/style.css
+++ b/style.css
@@ -240,3 +240,14 @@ input[type="date"]:focus {
         gap: 10px;
     }
 }
+.logo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.logo img {
+    max-width: 180px;
+    width: 100%;
+    height: auto;
+}
